# fuzztest-tracegen

./: .clang-format  .gitignore  .gitmodules
fuzztest/: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.txt  aes_counter_simulation.cpp  aes_test.cpp  aes_test.h  afl.c  afl.h  bootfuzzer.cpp  bootloader.cpp  checkformula.cpp  coverage.cpp  coverage.h  formula.cpp  formula.h  formula.list  genfw.sh  genmeminterface.sh  genrsa.sh  genshafw.sh  meminterface_test.cpp  page_table_test.cpp  property_parser.h  rsa_test.cpp  run.sh  secureboot  secureboot.cpp  secureboot.h  secureboot_simulation.cpp  sha_test.cpp  simulation.cpp  simulation.cpp.orig  tamper.cpp  tamper.h  temp.txt  trace.h  tracerecord.cpp  tracerecord.h  (+1 more)
fuzztest/.test/: pagetable.cc  rsa.cpp  wr.cpp
fuzztest/afl-in/: 1.txt  11.txt  tmpr1.txt
fuzztest/afl-in/aes_test/: 1.txt
fuzztest/afl-in/sha_test/: 2.txt  3.txt
fuzztest/afl-out/: .cur_input  fuzz_bitmap  fuzzer_stats  plot_data
fuzztest/afl-out/queue/: id:000000,orig:11.txt  id:000001,src:000000,op:flip1,pos:0
fuzztest/logs/annotated/: aes_128.v  aes_round.v  aes_table.v  aes_top.v  mem_wr.v  modexp.v  modexp_top.v  modmul.v  oc8051_alu.v  oc8051_decoder.v  oc8051_divide.v  oc8051_etr.v  oc8051_indi_addr.v  oc8051_int.v  oc8051_memarbiter.v  oc8051_memory_interface.v  oc8051_page_table.v  oc8051_ports.v  oc8051_priv_lvl.v  oc8051_procarbiter.v  oc8051_psw.v  oc8051_ram_256x8_two_bist.v  oc8051_ram_top.v  oc8051_rom.v  oc8051_sfr.v  oc8051_sp.v  oc8051_symbolic_cxrom.v  oc8051_tb.v  oc8051_top.v  oc8051_uart.v  oc8051_uart_test.v  oc8051_xiommu.v  reg16byte.v  reg256byte.v  reg2byte.v  sha1_core.v  sha1_w_mem.v  sha_top.v
fuzztest/scripts/: genptfw.sh  genwr.sh
fuzztest/traces/: trace_0.txt
fw/: aes_test.asm  aes_test.c  aes_test.ihx  aes_test.lst  aes_test.map  aes_test.mem  aes_test.rel  aes_test.rst  aes_test.sym  exp_test.c  memwr.c  page_table_test.c  rsa_only.c  secureboot.c  sha_pycomp.c  sha_test.c  sha_test.ihx
libprop/: CMakeLists.txt  Makefile  README.md  README.txt  formula.h  setup.sh  trace.h
libprop/include/: ast.h  ast_adapted.h  formula.h  parse_util.h  parser.h  parser_def.h  trace.h
libprop/src/: formula.cpp  parser.cpp
libprop/test/: test_HPLTLClasses.cpp  test_XPlus.cpp  test_always_operator.cpp  test_formula_api.cpp  test_not_operator.cpp  test_once_operator.cpp  test_parser.cpp  test_propvar.cpp  test_since_operator.cpp  test_termarray.cpp  test_vartrace.cpp  test_yesterday_operator.cpp  testprop.cpp
property-parser-testsuite/: CMakeLists.txt  ParserUtils.cpp  README.txt  global_defs.h  main.cpp  parser_utils.cpp  property_parser.h  simpleLTLProp.cpp  test_functions.h  test_once_operator.cpp  test_past_operator.cpp  test_simple2safety.cpp  test_simpleLTL.cpp
property-parser-testsuite/include/: global_defs.h  probmodel.h  property_parser.h
property-parser-testsuite/prob-models/: ProbModel.cpp  ProbModel.h
property-parser-testsuite/src/: main.cpp  parser_utils.cpp  test_eqlarray_operator.cpp  test_implies_operator.cpp  test_not_operator.cpp  test_once_operator.cpp  test_relational_operator.cpp  test_simple2safety.cpp  test_since_operator.cpp  test_yesterday_operator.cpp
rom/: prog.hex
rtl/: VERIFIC_DFFRS.v  VERIFIC_FADD.v  aes_128.v  aes_round.v  aes_top.v  build_model.sh  cvroutines.cpp  flatten.dbg  inputiface.cpp  modelinput.cpp  oc8051_cxrom.v  oc8051_tb.v  oc8051_xiommu.v  oc8051_xram.v  temp  top_instr.v
scripts/: datfile  run_secureboot
tracegen/: CMakeLists.txt  probmodel.cpp  probmodel.h  tracegen.cpp  tracegen.h
verilator/: verilator-config-version.cmake  verilator-config.cmake
verilator/examples/make_protect_lib/obj_dir_secret/: Vsecret_impl.cpp  Vsecret_impl.h  Vsecret_impl.mk  Vsecret_impl_PSUCik.cpp  Vsecret_impl_PSUCik.h  Vsecret_impl__ALLsup.cpp  Vsecret_impl__idmap.xml  Vsecret_impl_classes.mk  verilated_secret.cpp
verilator/examples/xml_py/: graph.dot
verilator/include/: verilated.h
verilator/src/: V3EmitCSyms.cpp  V3Options.cpp  V3Options.h  Verilator.cpp
